# gemfyi

./: README.md  demo.tape  pyproject.toml  server.json  smithery.yaml
src/gemfyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_basic.py
